--- a/.github/workflows/gempush.yml
+++ b/.github/workflows/gempush.yml
@@ -25,5 +25,5 @@ jobs:
         gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
       env:
         GEM_HOST_API_KEY: ${{ github.token }} 
-        OWNER: $${{ github.actor }}
+        OWNER: ${{ github.actor }}
 
